# bdmask4

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: bdmapp.cpp  bdmapp.h  main-torch.cpp  main-yolo.cpp  main.cpp  main2.cpp  main3.cpp  main_bdm.cpp  main_copy---.cu  main_tmp.cu  maintmp.cpp  mainttt.cpp  mask_cuda.cu  sort.cu  sort2.cu
src/app_bdm/: bdm.cpp  bdm.hpp  detect_decode.cu
src/app_blender/: blender.cpp  blender.hpp
src/app_fcos/: fcos.cpp  fcos.hpp  fcos_decode.cu
src/common/: object_detector.hpp
src/tensorRT/common/: preprocess_kernel.cu  preprocess_kernel.cuh  trt_tensor.cpp  trt_tensor.hpp
src/tensorRT/infer/: trt_infer.cpp
src/test/: cudatmp.cu  main-torch.cpp  mask_cuda.cu
workspace/: blender_inf.py  blender_onnx.py  blender_onnx2-DY.py  blender_onnx2.py  export_model_to_onnx-dy.py  export_model_to_onnx-fmp.py  export_model_to_onnx-static.py  export_model_to_onnx.py  export_model_to_onnx2.py  gpu3_3090-orig.py  onnx_use.py  tmp.ipynb  train.json  trtexec.sh
workspace/code/: gpu3_3090-orig.py  onnx_predict.py  onnx_use.py  read_onnx.py  trt_inf.py
workspace/code/convert/: blender_inf.py  export_model_to_onnx-dy.py
workspace/code/prune/: FLOP.py  conv_prune.py  gpu3_3090-prune.py  prune.md  resnet2.py  tools.ipynb  torchvision_global_pruning.py  模型剪枝.xmind
workspace/code/ptq/: export_model_to_onnx-dy-ptq.py
workspace/code/ptq-bdm/: gpu3_3090-orig.py
workspace/code/ptq-bdm/ptq/: README.md  export_model_to_onnx-dy-ptq copy.py  export_model_to_onnx-dy-ptq.py  tmp.ipynb
workspace/ptq/: export_model_to_onnx-dy-ptq.py
(+14 files in other folders)
